--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-family: var(--font);
  }
 
 .header {
@@ -48,8 +49,22 @@ html, body {
     align-items: center; 
     flex-direction: column; 
     justify-content: center;
+    font-family: var(--font-list);
 }
 
 .greeting-box-text, .content-aside-right {
     text-align: center;
 }
+
+.content-main-img {
+    height: 45%;
+    width: 45%;
+    object-fit: contain;
+    margin-top: 1%;
+}
+
+:root {
+    --font-list: Open Sans, sans-serif;
+    --font: Montserrat, sans-serif;
+ }
+ 
